--- a/MyCity4Kids/MyCity4Kids/res/layout/video_upload_progress_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/video_upload_progress_activity.xml
@@ -49,8 +49,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/status"
-            android:padding="@dimen/space_10"
-            android:background="@color/black_15">
+            android:background="@color/black_15"
+            android:padding="@dimen/space_10">
 
             <TextView
                 android:id="@+id/video_name"
@@ -58,8 +58,8 @@
                 android:layout_height="wrap_content"
                 android:ellipsize="middle"
                 android:singleLine="true"
-                android:textColor="#333333"
                 android:text="Please wait..."
+                android:textColor="#333333"
                 android:textSize="12sp"
                 android:textStyle="bold" />
 
@@ -183,6 +183,7 @@
 
 
         <com.mycity4kids.widget.CustomFontTextView
+            android:id="@+id/modrationText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/underline2"
@@ -198,15 +199,16 @@
             android:id="@+id/okayTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/underline2"
+            android:layout_below="@+id/modrationText"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="51dp"
+            android:layout_marginTop="20dp"
             android:gravity="center"
             android:paddingLeft="60dp"
             android:paddingTop="14dp"
             android:paddingRight="60dp"
             android:paddingBottom="14dp"
             android:text="@string/video_progress.okay"
+
             android:textColor="@color/video_progress.okay"
             android:textSize="18sp"
             app:fontName="oswald.ttf" />
