key added for rewards and campaign

--- a/MyCity4Kids/MyCity4Kids/res/layout/fragment_rewards.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/fragment_rewards.xml
@@ -34,76 +34,6 @@
                 android:background="@drawable/gradient_in_video_challenge_image" />
 
             <com.mycity4kids.widget.CustomFontTextView
-                android:id="@+id/text1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/textAgain"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="10dp"
-                android:text="@string/rewards_participate_and_earn"
-                android:textAllCaps="true"
-                android:textColor="#666666"
-                android:textSize="18sp"
-                android:visibility="visible"
-                app:fontName="oswald_regular.ttf" />
-
-            <com.mycity4kids.widget.CustomFontTextView
-                android:id="@+id/text2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/imageView2"
-                android:layout_margin="12sp"
-                android:layout_marginTop="10dp"
-                android:layout_marginRight="12sp"
-                android:gravity="center"
-                android:text="@string/rewards_description"
-                android:textSize="16sp"
-                app:fontName="oswald.ttf" />
-
-            <com.mycity4kids.widget.CustomFontTextView
-                android:id="@+id/textAgain"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/text2"
-                android:layout_marginLeft="12sp"
-                android:layout_marginTop="10dp"
-                android:layout_marginRight="12sp"
-                android:gravity="center"
-                android:text="@string/reards.description_secand_text"
-                android:textSize="16sp"
-                app:fontName="oswald.ttf" />
-
-            <TextView
-                android:id="@+id/text3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/text2"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="20dp"
-                android:gravity="center"
-                android:text="Leading brands host campaiL"
-                android:visibility="gone" />
-
-            <com.mycity4kids.widget.CustomFontTextView
-                android:id="@+id/textStartReward"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/text1"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="20dp"
-                android:layout_marginRight="4dp"
-                android:background="@drawable/shape_red_fill"
-                android:gravity="center"
-                android:paddingLeft="40dp"
-                android:paddingTop="10dp"
-                android:paddingRight="40dp"
-                android:paddingBottom="10dp"
-                android:text="@string/rewards_start_now"
-                android:textColor="@color/white"
-                android:textSize="14sp"
-                app:fontName="oswald_regular.ttf" />
-
-            <com.mycity4kids.widget.CustomFontTextView
                 android:id="@+id/textView7"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -124,30 +54,118 @@
                 android:textSize="18sp"
                 app:fontName="oswald_regular.ttf" />
 
+            <RelativeLayout
+                android:id="@+id/relativeParticipate"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:visibility="gone"
+                android:layout_below="@+id/imageView2">
+
+                <com.mycity4kids.widget.CustomFontTextView
+                    android:id="@+id/text1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/textAgain"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginTop="10dp"
+                    android:text="@string/rewards_participate_and_earn"
+                    android:textAllCaps="true"
+                    android:textColor="#666666"
+                    android:textSize="18sp"
+                    android:visibility="visible"
+                    app:fontName="oswald_regular.ttf" />
+
+                <com.mycity4kids.widget.CustomFontTextView
+                    android:id="@+id/text2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="12sp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginRight="12sp"
+                    android:gravity="center"
+                    android:text="@string/rewards_description"
+                    android:textSize="16sp"
+                    app:fontName="oswald.ttf" />
+
+                <com.mycity4kids.widget.CustomFontTextView
+                    android:id="@+id/textAgain"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/text2"
+                    android:layout_marginLeft="12sp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginRight="12sp"
+                    android:gravity="center"
+                    android:text="@string/reards.description_secand_text"
+                    android:textSize="16sp"
+                    app:fontName="oswald.ttf" />
+
+                <TextView
+                    android:id="@+id/text3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/text2"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginTop="20dp"
+                    android:gravity="center"
+                    android:text="Leading brands host campaiL"
+                    android:visibility="gone" />
+
+                <com.mycity4kids.widget.CustomFontTextView
+                    android:id="@+id/textStartReward"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/text1"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginRight="4dp"
+                    android:background="@drawable/shape_red_fill"
+                    android:gravity="center"
+                    android:paddingLeft="40dp"
+                    android:paddingTop="10dp"
+                    android:paddingRight="40dp"
+                    android:paddingBottom="10dp"
+                    android:text="@string/rewards_start_now"
+                    android:textColor="@color/white"
+                    android:textSize="14sp"
+                    app:fontName="oswald_regular.ttf" />
+
+            </RelativeLayout>
+
+
         </RelativeLayout>
 
         <LinearLayout
+            android:id="@+id/linearConnectivity"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/headerRelativeLayout"
             android:layout_marginTop="@dimen/space_20"
             android:background="@color/white"
-            android:orientation="vertical">
-
+            android:orientation="vertical"
+            android:visibility="gone">
 
             <com.mycity4kids.widget.CustomFontTextView
+                android:id="@+id/textPersonalInfo"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
                 android:drawableLeft="@drawable/ic_personal_info"
                 android:drawablePadding="15dp"
                 android:padding="@dimen/space_20"
-
                 android:text="PERSONAL INFO"
                 android:textSize="14sp"
                 app:fontName="oswald.ttf" />
 
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:background="@color/grey_light" />
+
             <com.mycity4kids.widget.CustomFontTextView
+                android:id="@+id/textSocial"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
@@ -156,10 +174,17 @@
                 android:padding="@dimen/space_20"
                 android:text="SOCIAL LINKS"
                 android:textSize="14sp"
-
                 app:fontName="oswald.ttf" />
 
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:background="@color/grey_light" />
+
             <com.mycity4kids.widget.CustomFontTextView
+                android:id="@+id/textPaymentModes"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
@@ -168,10 +193,17 @@
                 android:padding="@dimen/space_20"
                 android:text="PAYMENT MODE"
                 android:textSize="14sp"
-
                 app:fontName="oswald.ttf" />
 
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:background="@color/grey_light" />
+
             <com.mycity4kids.widget.CustomFontTextView
+                android:id="@+id/textPanDetails"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
@@ -179,11 +211,8 @@
                 android:drawablePadding="15dp"
                 android:padding="@dimen/space_20"
                 android:text="PAN DETAILS"
-
                 android:textSize="14sp"
                 app:fontName="oswald.ttf" />
-
-
         </LinearLayout>
     </RelativeLayout>
 
