--- a/MyCity4Kids/MyCity4Kids/res/layout/pancard_detail_submission_fragment.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/pancard_detail_submission_fragment.xml
@@ -44,39 +44,6 @@
             app:fontName="oswald_regular.ttf" />
     </RelativeLayout>
 
-    <!--    <com.mycity4kids.widget.CustomFontTextView
-            android:id="@+id/textView9"
-            android:layout_width="317dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="28dp"
-            android:text="In case of Invalid/No Pan card attached, 20% tax will be deducted from the payment."
-            android:textColor="#4A4A4A"
-            android:textSize="16sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/guideline"
-            app:layout_constraintTop_toBottomOf="@+id/relativeLayout2" />
-
-        <com.mycity4kids.widget.CustomFontTextView
-            android:id="@+id/textView10"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="24dp"
-            android:layout_marginLeft="24dp"
-            android:layout_marginTop="28dp"
-            android:text="NOTE :"
-            android:textColor="@color/app_red"
-            android:textSize="16sp"
-            app:layout_constraintEnd_toStartOf="@+id/guideline"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/relativeLayout2" />
-
-        <android.support.constraint.Guideline
-            android:id="@+id/guideline"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.2" />-->
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -125,7 +92,7 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <com.mycity4kids.widget.CustomFontTextView
-        android:id="@+id/textView11"
+        android:id="@+id/textLater"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
