rewards flow and many other small fixes

--- a/MyCity4Kids/MyCity4Kids/res/layout/fragment_item_list.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/fragment_item_list.xml
@@ -131,7 +131,7 @@
             android:layout_below="@+id/headerTextViewContainer"
             android:layout_marginTop="0dp"
             android:alpha="0.3"
-            android:visibility="gone"
+            android:visibility="visible"
             android:background="#EB3955"
             android:gravity="center">
 
