--- a/MyCity4Kids/MyCity4Kids/res/layout/dialog_show_rewards.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/dialog_show_rewards.xml
@@ -2,11 +2,12 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/bottom_sheet"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/shape_shadow_rectangle"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:background="@drawable/confetti"
     android:clickable="true"
     android:gravity="center"
+    android:layout_gravity="center"
     android:orientation="vertical"
     android:paddingTop="@dimen/space_28"
     android:paddingBottom="@dimen/space_28"
@@ -15,7 +16,7 @@
 
     <com.mycity4kids.widget.CustomFontTextView
         android:id="@+id/header"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:text="@string/dialog_based_on_profile"
@@ -25,7 +26,7 @@
 
     <com.mycity4kids.widget.CustomFontTextView
         android:id="@+id/sub_text"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/space_5"
         android:gravity="center"
@@ -36,7 +37,7 @@
 
     <com.mycity4kids.widget.CustomFontTextView
         android:id="@+id/show_amount"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/space_5"
         android:gravity="center"
