--- a/MyCity4Kids/MyCity4Kids/res/values/dimens.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values/dimens.xml
@@ -65,4 +65,11 @@
     <dimen name="space_4">4dp</dimen>
     <dimen name="space_2">2dp</dimen>
     <dimen name="space_50">50dp</dimen>
+    <dimen name="space_80">80dp</dimen>
+    <dimen name="space_65">65dp</dimen>
+    <dimen name="space_46">46dp</dimen>
+    <dimen name="space_100">100dp</dimen>
+    <dimen name="space_88">88dp</dimen>
+    <dimen name="space_103">103dp</dimen>
+    <dimen name="space_35">35dp</dimen>
 </resources>
