--- a/MyCity4Kids/MyCity4Kids/res/layout/fragment_add_proof.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/fragment_add_proof.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -124,77 +123,19 @@
                 app:fontName="oswald.ttf" />
         </RelativeLayout>
 
-        <RelativeLayout
-            android:id="@+id/relativeTextProof"
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recyclerUrlProof"
+            android:name="com.mycity4kids.ui.campaign.fragment.CampaignAddProofFragment"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/headerTextViewContainer"
-            android:layout_marginTop="0dp"
-            android:alpha="0.3"
-            android:visibility="visible"
-            android:background="#EB3955"
-            android:gravity="center">
-
-            <com.mycity4kids.widget.CustomFontEditText
-                android:id="@+id/addLinkOrUrlEditTextView1"
-                android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentRight="true"
-                android:layout_marginStart="12dp"
-                android:layout_marginLeft="12dp"
-                android:layout_marginTop="30dp"
-                android:layout_marginEnd="12dp"
-                android:layout_marginRight="12dp"
-                android:layout_marginBottom="30dp"
-                android:background="@drawable/article_listing_item_border_bg"
-                android:fontFamily="sans-serif"
-                android:hint="Enter page link or Url"
-                android:paddingLeft="12dp"
-                android:textColor="@color/black"
-                android:textSize="14sp"
-                android:visibility="visible" />
-
-            <com.mycity4kids.widget.CustomFontEditText
-                android:id="@+id/addLinkOrUrlEditTextView2"
-                android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:layout_below="@+id/addLinkOrUrlEditTextView1"
-                android:layout_marginStart="12dp"
-                android:layout_marginLeft="12dp"
-                android:layout_marginEnd="12dp"
-                android:layout_marginRight="12dp"
-                android:layout_marginBottom="30dp"
-                android:background="@drawable/article_listing_item_border_bg"
-                android:fontFamily="sans-serif"
-                android:hint="Enter page link or Url"
-                android:paddingLeft="12dp"
-                android:textColor="#AFAFAF"
-                android:textSize="14sp"
-                android:visibility="visible" />
-
-            <com.mycity4kids.widget.CustomFontEditText
-                android:id="@+id/addLinkOrUrlEditTextView3"
-                android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:layout_below="@+id/addLinkOrUrlEditTextView2"
-                android:layout_marginStart="12dp"
-                android:layout_marginLeft="12dp"
-                android:layout_marginEnd="12dp"
-                android:layout_marginRight="12dp"
-                android:layout_marginBottom="30dp"
-                android:background="@drawable/article_listing_item_border_bg"
-                android:fontFamily="sans-serif"
-                android:hint="Enter page link or Url"
-                android:paddingLeft="12dp"
-                android:textColor="#AFAFAF"
-                android:textSize="14sp"
-                android:visibility="visible" />
-
-
-        </RelativeLayout>
+            android:layout_marginTop="10dp"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintVertical_bias="0.0" />
 
         <RelativeLayout
             android:id="@+id/relativeMediaProof"
@@ -203,9 +144,9 @@
             android:layout_below="@+id/headerTextViewContainer"
             android:layout_marginTop="0dp"
             android:alpha="0.3"
-            android:visibility="gone"
             android:background="#EB3955"
-            android:gravity="center">
+            android:gravity="center"
+            android:visibility="gone">
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/recyclerMediaProof"
