--- a/MyCity4Kids/MyCity4Kids/res/layout/rewards_bottom_sheet.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/rewards_bottom_sheet.xml
@@ -59,7 +59,7 @@
                     android:gravity="center"
                     android:paddingLeft="5dp"
                     android:paddingRight="5dp"
-                    android:text="Momspresso Rewards"
+                    android:text="Momspresso MyMoney"
                     android:textColor="@color/app_red"
                     android:textSize="18sp"
                     android:textStyle="bold"
